--- a/Golang/Go语言基础/1.安装与配置.md
+++ b/Golang/Go语言基础/1.安装与配置.md
@@ -21,11 +21,11 @@ go env
 ## 三、开发目录结构
 
 ### 1. 适合个人开发者
-![目录结构](/Users/afuka/Documents/Typora/Go/assert/目录结构.png)
+![目录结构](./assert/目录结构.png)
 举例我自己编的库的地址为 `import "github.com/afuka/test1"`
 
 ### 2. 适合企业开发者
-![目录结构](/Users/afuka/Documents/Typora/Go/assert/目录结构2.png)
+![目录结构](./assert/目录结构2.png)
 
 ## 四、开发者编辑器
 推荐使用Vscode，其中Goland的话，是收费的IDE，在这里推荐使用官方golang.go出的Go插件进行支持
