--- a/Golang/Go语言基础/17.性能调优.md
+++ b/Golang/Go语言基础/17.性能调优.md
@@ -253,7 +253,7 @@ brew install graphviz
 
 Windows: 下载[graphviz](https://graphviz.gitlab.io/_pages/Download/Download_windows.html) 将`graphviz`安装目录下的bin文件夹添加到Path环境变量中。 在终端输入`dot -version`查看是否安装成功。
 
-![CPU占比图](/Users/afuka/Documents/Typora/Go/assert/cpu_pprof.png)关于图形的说明： 每个框代表一个函数，理论上框的越大表示占用的CPU资源越多。 方框之间的线条代表函数之间的调用关系。 线条上的数字表示函数调用的次数。 方框中的第一行数字表示当前函数占用CPU的百分比，第二行数字表示当前函数累计占用CPU的百分比。
+![CPU占比图](./assert/cpu_pprof.png)关于图形的说明： 每个框代表一个函数，理论上框的越大表示占用的CPU资源越多。 方框之间的线条代表函数之间的调用关系。 线条上的数字表示函数调用的次数。 方框中的第一行数字表示当前函数占用CPU的百分比，第二行数字表示当前函数累计占用CPU的百分比。
 
 除了分析CPU性能数据，pprof也支持分析内存性能数据。比如，使用下面的命令分析http服务的heap性能数据，查看当前程序的内存占用以及热点内存对象使用的情况。
 
@@ -328,7 +328,7 @@ go-torch -u http://127.0.0.1:8080 -t 30
 
 30秒之后终端会初夏如下提示：`Writing svg to torch.svg`
 
-然后我们使用浏览器打开`torch.svg`就能看到如下火焰图了。![火焰图](/Users/afuka/Documents/Typora/Go/assert/pprof3.png)火焰图的y轴表示cpu调用方法的先后，x轴表示在每个采样调用时间内，方法所占的时间百分比，越宽代表占据cpu时间越多。通过火焰图我们就可以更清楚的找出耗时长的函数调用，然后不断的修正代码，重新采样，不断优化。
+然后我们使用浏览器打开`torch.svg`就能看到如下火焰图了。![火焰图](./assert/pprof3.png)火焰图的y轴表示cpu调用方法的先后，x轴表示在每个采样调用时间内，方法所占的时间百分比，越宽代表占据cpu时间越多。通过火焰图我们就可以更清楚的找出耗时长的函数调用，然后不断的修正代码，重新采样，不断优化。
 
 此外还可以借助火焰图分析内存性能数据：
 
