--- a/Golang/Go语言基础/23.Go操作etcd.md
+++ b/Golang/Go语言基础/23.Go操作etcd.md
@@ -22,7 +22,7 @@ etcd具有以下特点：
 
 服务发现要解决的也是分布式系统中最常见的问题之一，即在同一个分布式集群中的进程或服务，要如何才能找到对方并建立连接。本质上来说，服务发现就是想要了解集群中是否有进程在监听 udp 或 tcp 端口，并且通过名字就可以查找和连接。
 
-![img](/Users/afuka/Documents/Typora/Go/assert/etcd_01.png)
+![img](./assert/etcd_01.png)
 
 ### 配置中心
 
@@ -37,7 +37,7 @@ etcd具有以下特点：
 - **保持独占即所有获取锁的用户最终只有一个可以得到**。etcd 为此提供了一套实现分布式锁原子操作 CAS（`CompareAndSwap`）的 API。通过设置`prevExist`值，可以保证在多个节点同时去创建某个目录时，只有一个成功。而创建成功的用户就可以认为是获得了锁。
 - 控制时序，即所有想要获得锁的用户都会被安排执行，但是**获得锁的顺序也是全局唯一的，同时决定了执行顺序**。etcd 为此也提供了一套 API（自动创建有序键），对一个目录建值时指定为`POST`动作，这样 etcd 会自动在目录下生成一个当前最大的值为键，存储这个新的值（客户端编号）。同时还可以使用 API 按顺序列出所有当前目录下的键值。此时这些键的值就是客户端的时序，而这些键中存储的值可以是代表客户端的编号。
 
-![img](/Users/afuka/Documents/Typora/Go/assert/etcd_02.png)
+![img](./assert/etcd_02.png)
 
 ## 为什么用 etcd 而不用ZooKeeper？
 
