--- a/Golang/Go语言基础/5.函数.md
+++ b/Golang/Go语言基础/5.函数.md
@@ -40,7 +40,7 @@ func main() {
 ```
 
 **defer执行时机**：在Go语言函数中 return 语句在底层并不是原子操作，它分为给返回值赋值和RET指令两步，而defer语句执行的时机就是在返回值赋值操作之后，RET指令执行之前。
-![defer执行时机](/Users/afuka/Documents/Typora/Go/assert/函数-defer执行时机.png)
+![defer执行时机](./assert/函数-defer执行时机.png)
 ```
 // 第一步：返回值赋值
 // defer
