--- a/Golang/Go语言基础/7.接口.md
+++ b/Golang/Go语言基础/7.接口.md
@@ -148,7 +148,7 @@ w = os.Stdout
 w = new(bytes.Buffer)
 w = nil
 ```
-![interface断言分解](/Users/afuka/Documents/Typora/Go/assert/interface断言分解.png)
+![interface断言分解](./assert/interface断言分解.png)
 
 想要判断空接口中的值这个时候就可以使用类型断言，其语法格式：`x.(T)`
 其中：x：表示类型为interface{}的变量; T：表示断言x可能是的类型。
@@ -180,7 +180,6 @@ func justifyType(x interface{}) {
 }
 ```
 因为空接口可以存储任意类型值的特点，所以空接口在Go语言中的使用十分广泛。
-
 
 
 
