--- a/Golang/Go语言基础/8.包.md
+++ b/Golang/Go语言基础/8.包.md
@@ -90,13 +90,13 @@ import _ "包的路径"
 ### 7, init()初始化函数
 在Go语言程序执行时导入包语句会自动触发包内部init()函数的调用。需要注意的是： init()函数没有参数也没有返回值。 init()函数在程序运行时自动被调用执行，不能在代码中主动调用它。包初始化执行的顺序如下图所示：
 
-![包init01](/Users/afuka/Documents/Typora/Go/assert/包init01.png)
+![包init01](./assert/包init01.png)
 
 Go语言包会从`main`包开始检查其导入的所有包，每个包中又可能导入了其他的包。Go编译器由此构建出一个树状的包引用关系，再根据引用顺序决定编译顺序，依次编译这些包的代码。
 
 在运行时，被最后导入的包会最先初始化并调用其`init()`函数， 如下图示：
 
-![包init02](/Users/afuka/Documents/Typora/Go/assert/包init02.png)
+![包init02](./assert/包init02.png)
 
 
 
