--- a/Golang/Go语言基础/9.文件.md
+++ b/Golang/Go语言基础/9.文件.md
@@ -179,7 +179,7 @@ func main() {
 ```
 注意，代码其中`os.O_CREATE|os.O_TRUNC|os.O_WRONLY` 相当于是一个位运算，如下图所示
 
-![文件写位运算](/Users/afuka/Documents/Typora/Go/assert/文件写位运算.png)
+![文件写位运算](./assert/文件写位运算.png)
 
 ### 2.bufio.NewWriter
 
@@ -269,7 +269,6 @@ file.Write(bytes)
 // 或者直接写
 file.WriteAt(bytes, 偏移量)
 ```
-
 
 
 
