--- a/Spark/1.Spark基础.md
+++ b/Spark/1.Spark基础.md
@@ -1,6 +1,6 @@
 # 一、Spark是什么
 **Apache Spark 是一个在集群上运行的统一计算引擎以及一组并行数据处理软件库。**，支持多种常用编程语言，提供支持SQL、流处理、机器学习等多种任务的软件库。
-![Spark工具包](/Users/afuka/Documents/Typora/Spark/assert/Spark工具包.png)
+![Spark工具包](./assert/Spark工具包.png)
 
 Spark的设计理念，即**构建一个统一的引擎，为通用数据分析任务提供统一的API。**
 
