--- a/数据中台/基本介绍.md
+++ b/数据中台/基本介绍.md
@@ -10,7 +10,7 @@
 
 
 
-![img](/Users/afuka/Documents/Typora/数据中台/assert/d28b86ff537cfe9200c8cf46dc64d5ff.png)
+![img](./assert/d28b86ff537cfe9200c8cf46dc64d5ff.png)
 
 恩门提出的建模方法自顶向下（这里的顶是指数据的来源，在传统数据仓库中，就是各个业务数据库），基于业务中各个实体以及实体之间的关系，构建数据仓库。*比如，在一个最简单的买家购买商品的场景中，按照恩门建模的思维模式，首先你要理清这个业务过程中涉及哪些实体。买家、商品是一个实体，买家购买商品是一个关系。所以，模型设计应该有买家表，商品表，和买家商品交易表三个模型。*
 
@@ -38,11 +38,11 @@
 
 对于一个数据开发，在完成一项需求时，常见的一个流程是首先要把数据导入到大数据平台中，然后按照需求进行数据开发。开发完成以后要进行数据验证比对，确认是否符合预期。接下来是把数据发布上线，提交调度。最后是日常的任务运维，确保任务每日能够正常产出数据。
 
-![img](/Users/afuka/Documents/Typora/数据中台/assert/0da4830dfc83e2907cd2d20cac6d6fb4.png)
+![img](./assert/0da4830dfc83e2907cd2d20cac6d6fb4.png)
 
 提出大数据平台的概念，就是为了提高数据研发的效率，降低数据研发的门槛，让数据能够在一个设备流水线上快速地完成加工。**大数据平台是面向数据研发场景的，覆盖数据研发的完整链路的数据工作台**
 
-![img](/Users/afuka/Documents/Typora/数据中台/assert/c40f3215cae131c16c5d33f127580bf6.png)
+![img](./assert/c40f3215cae131c16c5d33f127580bf6.png)
 
 大数据平台按照使用场景，分为数据集成、数据开发、数据测试……任务运维，大数据平台的使用对象是数据开发。大数据平台的底层是以 Hadoop 为代表的基础设施，分为计算、资源调度和存储。
 
@@ -154,7 +154,7 @@ Hive、Spark、Flink、Impala 提供了大数据计算引擎：
 - 数据只加工一次是建设数据中台的核心，本质上是要实现公共计算逻辑的下沉和复用。
 - 如果你的企业拥有 3 个以上的数据应用场景，数据产品还在不断研发和更新，你必须要认真考虑建设数据中台。
 
-![img](/Users/afuka/Documents/Typora/数据中台/assert/1a03abc87fb3bd691a03d2a56c974e9c.png)
+![img](./assert/1a03abc87fb3bd691a03d2a56c974e9c.png)
 
 
 
