--- a/数据中台/方法论、组织和技术.md
+++ b/数据中台/方法论、组织和技术.md
@@ -14,7 +14,7 @@ id mapping，基于人工规则，通过机器学习
 
 用一句话定义 OneData 的话，就是所有数据只加工一次。
 
-![img](/Users/afuka/Documents/Typora/数据中台/assert/111bdb91bcc9f36ea3da013a3bca610d.png)
+![img](./assert/111bdb91bcc9f36ea3da013a3bca610d.png)
 
 电商业务建设数据中台之前，每个部门内部都会有一些小的数仓去完成本部门的数据分析需求。
 
@@ -28,7 +28,7 @@ id mapping，基于人工规则，通过机器学习
 
 那具体来说，如何去做才能实现数据只加工一次呢？有这样五点：
 
-![img](/Users/afuka/Documents/Typora/数据中台/assert/39c72956708fe40c781ce0e03dfb7508.png)
+![img](./assert/39c72956708fe40c781ce0e03dfb7508.png)
 
 试想一下，现在你构建了数据中台，但存在几万张表，同时又有几十个数据开发维护这些表，如何来确保这些表的管理效率？ 我建议你**选择划主题域**。
 
@@ -36,11 +36,11 @@ id mapping，基于人工规则，通过机器学习
 
 **除此之外，还要对表的命名进行规范化统一**， 表的名称中最好能够携带表的主题域、业务过程、分层以及分区信息。比如，对于仓储域下的一张入库明细表，规则命名可以这样：
 
-![img](/Users/afuka/Documents/Typora/数据中台/assert/251a20233507361d8795277a4ef8edd0.png)
+![img](./assert/251a20233507361d8795277a4ef8edd0.png)
 
 接着你还必须构建全局的指标字典，确保所有表中相同指标的口径必须一致
 
-![img](/Users/afuka/Documents/Typora/数据中台/assert/2ca64f179ce1c756d520fb38881afd77.png)
+![img](./assert/2ca64f179ce1c756d520fb38881afd77.png)
 
 另外，为了实现模型的复用，数据中台适合采用分层的设计方式，常见的分层包括：ODS 原始数据层，DWD 明细数据层，DWS 轻度汇总数据层，ADS/DM 应用数据层 / 数据集市层。**最后，数据中台的数据必须尽可能的覆盖所有的业务过程**，数据中台中每一层的数据也要尽可能完善，让数据使用者尽可能的使用汇总后的数据。
 
@@ -67,7 +67,7 @@ OneService，数据即服务，强调数据中台中的数据应该是通过 API
 
 那如何来实现数据服务化呢？
 
-![img](/Users/afuka/Documents/Typora/数据中台/assert/83c1364dc7c836a31122a45ebea09672.png)
+![img](./assert/83c1364dc7c836a31122a45ebea09672.png)
 
 - **屏蔽异构数据源**：数据服务必须要能够支撑类型丰富的查询引擎，满足不同场景下数据的查询需求，常见的有 MySQL、HBase、Greenplum、Redis、Elasticsearch 等。
 - **数据网关**：要实现包括权限、监控、流控、日志在内的一系列管控能力，哪个应用的哪个页面访问了哪个模型，要做到实时跟踪，如果有一些模型长时间没有被访问，应该予以下线。使用数据的每个应用都应该通过 accesskey 和 secretkey 实现身份认证和接口权限的管理。另外，访问日志可以方便在访问出现问题时，加快排查速度。
@@ -78,7 +78,7 @@ OneService，数据即服务，强调数据中台中的数据应该是通过 API
 
 ## 1.数据中台支撑技术
 
-![img](/Users/afuka/Documents/Typora/数据中台/assert/8da01dbcf1f318fcf90d3c26e3f1b602.png)
+![img](./assert/8da01dbcf1f318fcf90d3c26e3f1b602.png)
 
 这个图完整地描述了数据中台支撑技术体系，它的底层是以 Hadoop 为代表的大数据计算、存储基础设施，提供了大数据运行所必须的计算、存储资源。
 
@@ -104,7 +104,7 @@ OneService，数据即服务，强调数据中台中的数据应该是通过 API
 
 综合来讲，什么样的组织架构是适合数据中台建设的呢？
 
-![img](/Users/afuka/Documents/Typora/数据中台/assert/4ac92d2291f1f478572372295caf5e6f.png)
+![img](./assert/4ac92d2291f1f478572372295caf5e6f.png)
 
 - 数据产品部门：负责数据中台、数据产品的体系规划、产品设计、规范制定、应用效果跟进，指标口径的定义和维护（有的部门是由分析师管理）。
 - 数据平台部门：负责研发支撑数据中台构建的产品，例如指标系统、元数据中心、数据地图等。
@@ -123,5 +123,5 @@ OneService，数据即服务，强调数据中台中的数据应该是通过 API
 
 数据中台的建设绝对不是为了建中台而建中台，数据中台的建设一定要结合落地场景，可以先从从一些小的场景开始，但是规划一定是要有顶层设计的。
 
-![img](/Users/afuka/Documents/Typora/数据中台/assert/afedf9dca0f4366ff3fad9ef2f44b952.png)
+![img](./assert/afedf9dca0f4366ff3fad9ef2f44b952.png)
 
