--- a/服务端积累/压力测试.md
+++ b/服务端积累/压力测试.md
@@ -4,7 +4,7 @@
 
 一般来说，可能有以下一些目的：
 
-![img](/Users/afuka/Documents/Typora/服务端积累/assert/1.png)
+![img](./assert/1.png)
 
 
 
@@ -42,7 +42,7 @@
 
 一般来说，压测对象可以这么分：
 
-![img](/Users/afuka/Documents/Typora/服务端积累/assert/2.png)
+![img](./assert/2.png)
 
 
 
@@ -66,7 +66,7 @@
 
 
 
-![img](/Users/afuka/Documents/Typora/服务端积累/assert/3.png)
+![img](./assert/3.png)
 
 
 
@@ -91,7 +91,7 @@
 
 
 
-![img](/Users/afuka/Documents/Typora/服务端积累/assert/4.png)
+![img](./assert/4.png)
 
 
 
@@ -108,11 +108,11 @@
 
 一般是随着压力的增加（并发请求的增加）探究qps/rt/成功率三者的关系，从而找到系统的平衡点，如果能结合服务端的监控数据，就更好。
 
-![img](/Users/afuka/Documents/Typora/服务端积累/assert/5.png)
+![img](./assert/5.png)
 
-![img](/Users/afuka/Documents/Typora/服务端积累/assert/6.png)
+![img](./assert/6.png)
 
-![img](/Users/afuka/Documents/Typora/服务端积累/assert/7.png)
+![img](./assert/7.png)
 
 
 
@@ -126,15 +126,15 @@
 
 **concurrent Thread Group**
 
-![img](/Users/afuka/Documents/Typora/服务端积累/assert/8.png)
+![img](./assert/8.png)
 
 
 
 **java sampler**
 
-![img](/Users/afuka/Documents/Typora/服务端积累/assert/9.png)
+![img](./assert/9.png)
 
-![img](/Users/afuka/Documents/Typora/服务端积累/assert/10.png)
+![img](./assert/10.png)
 
 
 
@@ -144,7 +144,7 @@
 
 
 
-![img](/Users/afuka/Documents/Typora/服务端积累/assert/11.png)
+![img](./assert/11.png)
 
 ## 2 其他
 
@@ -170,7 +170,7 @@
 
 
 
-![img](/Users/afuka/Documents/Typora/服务端积累/assert/12.png)
+![img](./assert/12.png)
 
 
 
@@ -231,7 +231,7 @@
 
 
 
-![img](/Users/afuka/Documents/Typora/服务端积累/assert/13.png)
+![img](./assert/13.png)
 
 
 
