--- a/服务端积累/在面对未知的流量暴增，预先怎么处理.md
+++ b/服务端积累/在面对未知的流量暴增，预先怎么处理.md
@@ -38,7 +38,7 @@
 
  **计数器**
 
-![img](/Users/afuka/Documents/Typora/服务端积累/assert/aHR0cHM6Ly9pbWFnZXMyMDE4LmNuYmxvZ3MuY29tL2Jsb2cvMTIwOTUzNy8yMDE4MDMvMTIwOTUzNy0yMDE4MDMyNjE3Mjc1NzE0OC0xNDkyODgwMTc3LnBuZw.png)
+![img](./assert/aHR0cHM6Ly9pbWFnZXMyMDE4LmNuYmxvZ3MuY29tL2Jsb2cvMTIwOTUzNy8yMDE4MDMvMTIwOTUzNy0yMDE4MDMyNjE3Mjc1NzE0OC0xNDkyODgwMTc3LnBuZw.png)
 
 ```
 计数器是一种比较简单的限流算法，用途比较广泛，在接口层面，很多地方使用这种方式限流。在一段时间内，进行计数，与阀值进行比较，到了时间临界点，将计数器清0。
@@ -54,7 +54,7 @@
 
 由于计数器存在临界点缺陷，后来出现了滑动窗口算法来解决。
 
-![img](/Users/afuka/Documents/Typora/服务端积累/assert/aHR0cHM6Ly9pbWFnZXMyMDE4LmNuYmxvZ3MuY29tL2Jsb2cvMTIwOTUzNy8yMDE4MDMvMTIwOTUzNy0yMDE4MDMyNjE3Mjk0MzUxNC02NzcwNDcyNzkucG5n.png)
+![img](./assert/aHR0cHM6Ly9pbWFnZXMyMDE4LmNuYmxvZ3MuY29tL2Jsb2cvMTIwOTUzNy8yMDE4MDMvMTIwOTUzNy0yMDE4MDMyNjE3Mjk0MzUxNC02NzcwNDcyNzkucG5n.png)
 
 局限性：
 
@@ -71,7 +71,7 @@
 有一个固定的桶，进水的速率是不确定的，但是出水的速率是恒定的，当水满的时候是会溢出的。
 ```
 
-![img](/Users/afuka/Documents/Typora/服务端积累/assert/aHR0cHM6Ly9pbWFnZXMyMDE4LmNuYmxvZ3MuY29tL2Jsb2cvMTIwOTUzNy8yMDE4MDMvMTIwOTUzNy0yMDE4MDMyNjE3MzEzNjMyNy03ODI1MzM0NzEucG5n.png)
+![img](./assert/aHR0cHM6Ly9pbWFnZXMyMDE4LmNuYmxvZ3MuY29tL2Jsb2cvMTIwOTUzNy8yMDE4MDMvMTIwOTUzNy0yMDE4MDMyNjE3MzEzNjMyNy03ODI1MzM0NzEucG5n.png)
 
 **令牌桶**
 
@@ -79,7 +79,7 @@
 注意到，漏桶的出水速度是恒定的，那么意味着如果瞬时大流量的话，将有大部分请求被丢弃掉（也就是所谓的溢出）。为了解决这个问题，令牌桶进行了算法改进。
 ```
 
-![img](/Users/afuka/Documents/Typora/服务端积累/assert/aHR0cHM6Ly9pbWFnZXMyMDE4LmNuYmxvZ3MuY29tL2Jsb2cvMTIwOTUzNy8yMDE4MDMvMTIwOTUzNy0yMDE4MDMyNjE3MzMwMjQ4MS0xMDI1MTc5MjUzLnBuZw.png)
+![img](./assert/aHR0cHM6Ly9pbWFnZXMyMDE4LmNuYmxvZ3MuY29tL2Jsb2cvMTIwOTUzNy8yMDE4MDMvMTIwOTUzNy0yMDE4MDMyNjE3MzMwMjQ4MS0xMDI1MTc5MjUzLnBuZw.png)
 
 局限性：
 
