--- a/Golang/Go语言基础/16.单元测试.md
+++ b/Golang/Go语言基础/16.单元测试.md
@@ -395,7 +395,7 @@ ok      github.com/Q1mi/studygo/code_demo/test_demo/split       0.005s
 
 上面的命令会将覆盖率相关的信息输出到当前文件夹下面的`c.out`文件中，然后我们执行`go tool cover -html=c.out`，使用`cover`工具来处理生成的记录信息，该命令会打开本地的浏览器窗口生成一个HTML报告。!
 
-![单元测试1](/Users/afuka/Documents/Typora/Go/assert/单元测试1.png)
+![单元测试1](./assert/单元测试1.png)
 
 上图中每个用绿色标记的语句块表示被覆盖了，而红色的表示没有被覆盖。
 
@@ -792,4 +792,4 @@ func ExampleSplit() {
    ok      github.com/Q1mi/studygo/code_demo/test_demo/split       0.006s
    ```
 
-3. 示例函数提供了可以直接运行的示例代码，可以直接在`golang.org`的`godoc`文档服务器上使用`Go Playground`运行示例代码。下图为`strings.ToUpper`函数在Playground的示例函数效果。![Go Playground](/Users/afuka/Documents/Typora/Go/assert/单元测试2.png)
+3. 示例函数提供了可以直接运行的示例代码，可以直接在`golang.org`的`godoc`文档服务器上使用`Go Playground`运行示例代码。下图为`strings.ToUpper`函数在Playground的示例函数效果。![Go Playground](./assert/单元测试2.png)
