--- a/Redis/原理/4.持久化.md
+++ b/Redis/原理/4.持久化.md
@@ -19,7 +19,7 @@ AOF三种写回策略
 - Everysec，每秒写回：每个写命令执行完，只是先把日志写到 AOF 文件的内存缓冲区，每隔一秒把缓冲区中的内容写入磁盘；
 - No，操作系统控制的写回：每个写命令执行完，只是先把日志写到 AOF 文件的内存缓冲区，由操作系统决定何时将缓冲区内容写回磁盘。
 
-![img](./assert/72f547f18dbac788c7d11yy167d7ebf8.png)
+![img](../assert/72f547f18dbac788c7d11yy167d7ebf8.png)
 
 
 
@@ -29,7 +29,7 @@ AOF三种写回策略
 
 为什么重写机制可以把日志文件变小呢? 实际上，重写机制具有“多变一”功能。所谓的“多变一”，也就是说，旧日志文件中的多条命令，在重写后的新日志中变成了一条命令。在重写的时候，是根据这个键值对当前的最新状态，为它生成对应的写入命令。
 
-![img](./assert/6528c699fdcf40b404af57040bb8d208.png)
+![img](../assert/6528c699fdcf40b404af57040bb8d208.png)
 
 
 
@@ -49,7 +49,7 @@ AOF 重写会阻塞吗?
 
 
 
-![img](./assert/6b054eb1aed0734bd81ddab9a31d0be8.png)
+![img](../assert/6b054eb1aed0734bd81ddab9a31d0be8.png)
 
 
 
@@ -76,7 +76,7 @@ Redis 就会借助操作系统提供的**写时复制技术**（Copy-On-Write, C
 
 如果主线程要修改一块数据，那么，这块数据就会被复制一份，生成该数据的副本。然后，bgsave 子进程会把这个副本数据写入 RDB 文件，而在这个过程中，主线程仍然可以直接修改原来的数据。
 
-![img](./assert/4dc5fb99a1c94f70957cce1ffef419cc.png)
+![img](../assert/4dc5fb99a1c94f70957cce1ffef419cc.png)
 
 
 
@@ -91,7 +91,7 @@ Redis 就会借助操作系统提供的**写时复制技术**（Copy-On-Write, C
 
 **此时，我们可以做增量快照**就是指，做了一次全量快照后，后续的快照只对修改的数据进行快照记录。
 
-![img](./assert/8a1d515269cd23595ee1813e8dff28a5.png)
+![img](../assert/8a1d515269cd23595ee1813e8dff28a5.png)
 
 虽然跟 AOF 相比，快照的恢复速度快，但是，快照的频率不好把握，如果频率太低，两次快照间一旦宕机，就可能有比较多的数据丢失。如果频率太高，又会产生额外开销
 
