--- a/程序员修炼之道/开发中说“容器”是什么.md
+++ b/程序员修炼之道/开发中说“容器”是什么.md
@@ -48,9 +48,9 @@ $car = new Car(new Wheel());
 >（2）为何是反转？哪些方面反转了？
 >有反转就有正转，传统应用程序是由我们自己在对象中主动控制去直接获取依赖对象，也就是正转；而反转则是由容器来帮忙创建及注入依赖对象。为何是反转？因为由容器帮我们查找及注入依赖对象，对象只是被动的接受依赖对象，所以是反转。哪些方面反转了？依赖对象的获取被反转了。
 
-![传统应用程序示意图](https://upload-images.jianshu.io/upload_images/2318436-8c3d1c028d121c16.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![传统应用程序示意图](./assert/1240.png)
 
-![使用容器应用程序示意图](https://upload-images.jianshu.io/upload_images/2318436-5efe9cfdad00868c.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![使用容器应用程序示意图](./assert/开发中容器.png)
 
 三、再来看什么是容器
 
