--- a/Golang/Go语言基础/2.基础语法.md
+++ b/Golang/Go语言基础/2.基础语法.md
@@ -50,7 +50,7 @@ uint、uint8、uint16、uint32、uint64、uintptr
 byte // uint8 的别名
 rune // int32 的别名 代表一个 Unicode 码
 float32、float64
-complex64、complex128
+complex64、complex128 // 复数
 ```
 ###  2. 变量赋值
 ```
