--- a/Golang/Go语言基础/13.并发.md
+++ b/Golang/Go语言基础/13.并发.md
@@ -467,6 +467,28 @@ func main() {
 3. `select` 存在多个 `case`：随机选择一个满足条件的`case`执行
 4. `select` 存在 `default`，其他`case`都不满足时：执行`default`语句中的代码
 
+
+
+但是注意的是，这段代码执行时会把CPU撑到100%：
+
+```
+
+func main()  {
+	var ch chan int
+	for {
+		select {
+		case <-ch:
+			return
+		default:
+		}
+	}
+
+```
+
+对于select语句，每个case的IO事件都是阻塞的，监听IO事件是不会占用CPU至满的。造成CPU占用的原因是这个空default，因为当case的条件不满足时，循环将会走default，然后执行下一个循环，这就造成了死循环，因此在使用for-select语句的时候不能定义空的default
+
+
+
 # 七、并发安全和锁
 有时候在Go代码中可能会存在多个`goroutine`同时操作一个资源（临界区），这种情况会发生竞态问题（数据竞态）。类比现实生活中的例子有十字路口被各个方向的的汽车竞争；还有火车上的卫生间被车厢里的人竞争。
 
